Optimizations
Signed-off-by: Frank Giordano <giofr01@yahoo.com>